--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "expect.js": "~0.3.1",
     "grunt": "^0.4.4",
     "grunt-contrib-jshint": "~0.4.3",
-    "grunt-mocha-cli": "~1.7.0",
+    "grunt-mocha-cli": "^2.1.0",
     "jshint-stylish": "~0.1.5",
     "load-grunt-tasks": "~0.4.0",
-    "mocha": "~1.12.1",
+    "mocha": "^3.0.2",
     "nock": "^2.12.0",
-    "redis-mock": "^0.3.0",
     "proxyquire": "^0.6.0",
-    "should": "^10.0.0"
+    "redis-mock": "^0.3.0",
+    "should": "^11.0.0"
   },
   "dependencies": {
     "amqp": "^0.2.0",
